--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asyncpg==0.27.0
 fastapi==0.95.1
 hsemotion==0.3.0
 imageio==2.28.1
+imageio-ffmpeg==0.4.8
 pillow==9.5.0
 psycopg2-binary==2.9.6
 pytube==15.0.0
