--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+-f https://download.pytorch.org/whl/torch_stable.html
 asyncpg==0.27.0
 fastapi==0.95.1
 hsemotion==0.3.0
@@ -8,5 +9,7 @@ psycopg2-binary==2.9.6
 pytube==15.0.0
 rmn==3.1.1
 timm==0.6.5
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
 uvicorn==0.22.0
 yoyo-migrations==7.3.2
