--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     network_mode: host
     volumes:
       - pytube_cache:/opt/app/pytube_cache
+      - images:/opt/app/images
     command: ["python3", "main.py"]
 
   frontend:
@@ -22,9 +23,12 @@ services:
     environment:
       DSN: ${DSN}
     network_mode: host
+    volumes:
+      - images:/opt/app/images
     depends_on:
       - backend
     command: ["uvicorn", "asgi:app", "--host", "0.0.0.0", "--port", "${PORT}"]
 
 volumes:
   pytube_cache:
+  images:
